syntax = "proto3";
package v1;


message HealthMessage {
    string health = 1;
    bool status = 2;
}

service Health {
    rpc HealthCheck(HealthMessage) returns (HealthMessage) {}
}



message TextToSpeechMessage {
    string data = 1;
    string response =2;
}

service TextToSpeech {
    rpc GenerateSpeech(TextToSpeechMessage) returns (TextToSpeechMessage){}
}